plang/testing/logs/false-incorrect/43/program43.p.p
s :- t.
oL :- ((((hOx z; u)))).
vy6p (Qg) (R) P :- iUQ (Lnti3) (r4IVq (h3lw) (vGfk5 AGm (Ls) (AL) (w (nwf) (r) Uof)) amEgK) (E4UDi) (YFS), us0, yMW c8YS (ppWJ E) (v VoPH (iZW (fUjRT w (rUn p) b1L WoDDS))) (b kN (uv9 (zjw (iUNb (j6nkx (r (adp JvOI mZve7)) IBa1 XIDu i2JaE))) (N))), (lAMo yMxK (Knhd3) q7), rtU AkwOi, wEnGc (wuZB8 (GXX)) (Iz) bkyJb, rU (yp p0f8) ZG JSuo; ljrO Ok59; gDz8, i9lKl (RB1k) nDb (hf xCIV); bgd IDx yz2k (M8) yw; e dNZwG qAe hMyX; y8 (D4IOE), s N4 (G2UT) (ZtnH) (PX).


woS7D (M) BpbA mZzAD (Y) :- ((r7 m3XE g); kcEmC sx2u; j, (xerz (g03b) iqY7g), (d (f (C50kO) AuQW GIW zHiX) (fpWL5 RKzO (m TI5 wMjhR (I) (rA (db (Ydk))))) (U7)), tXP).
x3RQx (sRCtP) xkDeM (BeUmd) :- ((x OjSJ; aD i tml dKb); muu (YqZ) (N); ((b23V g1H1 EXuDF yabVn); (qFlf))).
h61Rg :- ((x sX (pj q XOBq U)); v468J fFho a sYy).


l3Jj3 yoJcI.


pa jj (ZX) EuKJ (GqD).
? ((sMr RLcS (DEF15) Jt jc9cX)), (h8G5P (Ky) (dV) (x13 J) (A9jk)); (yQo A2k zj; lCkw (dqebP); sD1XE y1zx (g (nhq Jv) JPG) (dY (cFPu Ao7 I) (u qvt1) (vQsk (Umsu5) hR (aJK JRY TZWyI (HY0nw)) (yS1 sjj3)) (G))); qpbg (XPd) (wa0 (WYOdv) (zl (ddbE4)) Zd (gn2hy Zbl7 (G) (ZV))); z (S), g uRQYe (d0c (RW) EI jBdx) Sy; pamF EYW Ujv, q z; (htT BcgN); xYd Stt (N); fd (rGfwI (I0I) (h) oFF8k H) (Af); gHPp (pv), yzPOG.



